# fearless_simd

./: .clippy.toml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  check_targets.sh
.github/: copyright.sh
.github/workflows/: ci.yml
fearless_simd/: Cargo.toml  README.md
fearless_simd/examples/: play.rs  sigmoid.rs  srgb.rs  unpremul.rs
fearless_simd/src/: generated.rs  half_assed.rs  impl_macros.rs  kernel_macros.rs  lib.rs  macros.rs  support.rs  traits.rs  transmute.rs
fearless_simd/src/core_arch/: fallback.rs  mod.rs
fearless_simd/src/core_arch/aarch64/: fp16.rs  mod.rs
fearless_simd/src/core_arch/wasm32/: mod.rs
fearless_simd/src/core_arch/x86/: avx.rs  avx2.rs  fma.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
fearless_simd/src/core_arch/x86_64/: avx.rs  avx2.rs  fma.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
fearless_simd_dev_macros/: Cargo.toml
fearless_simd_dev_macros/src/: lib.rs
fearless_simd_gen/: Cargo.toml
fearless_simd_gen/src/: generic.rs  level.rs  main.rs  mk_avx2.rs  mk_fallback.rs  mk_neon.rs  mk_ops.rs  mk_simd_trait.rs  mk_simd_types.rs  mk_sse4_2.rs  mk_wasm.rs  mk_x86.rs  ops.rs  types.rs  x86_common.rs
fearless_simd_gen/src/arch/: avx2.rs  fallback.rs  mod.rs  neon.rs  sse4_2.rs  wasm.rs  x86.rs  x86_common.rs
fearless_simd_tests/: Cargo.toml  README.md
fearless_simd_tests/tests/: harness.rs  mod.rs  soundness.rs  wasm.rs
fearless_simd_tests/tests/harness/: lm_generated.rs  mod.rs  slide_exhaustive.rs
fearless_simd_tests/tests/harness/lm_generated/: extended_512.rs  mask_methods.rs  mod_256.rs  mod_512.rs
