[package]
name = "fearless_simd_gen"
version = "0.3.0"
license.workspace = true
edition.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
clap = { version = "4.5.39", features = ["derive"] }
