[package]
name = "fearless_simd_tests"
license.workspace = true
edition.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"
rust-version.workspace = true
publish = false

[[test]]
name = "tests"
path = "tests/mod.rs"

[lints]
workspace = true

[dependencies]
fearless_simd = { workspace = true, features = ["std"] }
fearless_simd_dev_macros = { workspace = true }
